[gd_scene load_steps=52 format=2]

[ext_resource path="res://Scenes/Player.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Player/Attack1/Attack1.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Player/Idle/Idle5.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Player/Run/Run.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Player/Idle/Idle2.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Player/Idle/Idle8.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Player/Idle/Idle7.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Player/Jump/Jump.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Player/Idle/Idle1.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Player/Fall/Fall.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Player/Idle/Idle4.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Player/Idle/Idle3.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Player/Idle/Idle6.png" type="Texture" id=13]
[ext_resource path="res://Scenes/AttackArea.gd" type="Script" id=14]
[ext_resource path="res://Sprites/Player/Death/Death.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Player/Take Hit white/Take Hit - white silhouette.png" type="Texture" id=16]
[ext_resource path="res://Sprites/healthbarover.png" type="Texture" id=17]
[ext_resource path="res://Sprites/healthbar.png" type="Texture" id=18]
[ext_resource path="res://Sprites/healthbarwhite.png" type="Texture" id=19]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 17.8701, 25.5953 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 66, 200, 66 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 200, 66, 200, 66 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 200, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 400, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 600, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 800, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1000, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 66, 200, 66 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 200, 66, 200, 66 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 400, 66, 200, 66 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 600, 66, 200, 66 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 800, 66, 200, 66 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1000, 66, 200, 66 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1200, 66, 200, 66 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1400, 66, 200, 66 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 66, 200, 66 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 200, 66, 200, 66 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 0, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 200, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 400, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 600, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 0, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 200, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 400, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 600, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 800, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 1000, 0, 200, 200 )

[sub_resource type="SpriteFrames" id=30]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "Fall",
"speed": 2.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": false,
"name": "Attack1",
"speed": 12.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "Run",
"speed": 8.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 5 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 3 ), ExtResource( 13 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "Idle",
"speed": 8.0
}, {
"frames": [ SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "Jump",
"speed": 2.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": false,
"name": "Hit",
"speed": 4.0
}, {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ) ],
"loop": false,
"name": "Death",
"speed": 6.0
} ]

[sub_resource type="RectangleShape2D" id=31]
extents = Vector2( 20.9603, 12.6126 )

[sub_resource type="RectangleShape2D" id=32]
extents = Vector2( 21.0941, 12.7785 )

[node name="PlayerBody" type="KinematicBody2D"]
position = Vector2( -207.546, 471.514 )
collision_layer = 6
collision_mask = 17
script = ExtResource( 1 )

[node name="PHitbox" type="Area2D" parent="."]
position = Vector2( 33.936, 11.3393 )
collision_layer = 6
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="PHitbox"]
position = Vector2( 1.14563, -1.82568 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 33.936, 11.3393 )
offset = Vector2( 0, -65 )
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( -428.064, -163.661 )
polygon = PoolVector2Array( 454.688, 199.63, 481.597, 199.63, 480.478, 161.207, 465.987, 147.733, 461.205, 146.654, 457, 147.705, 445.381, 163.114, 445.228, 173.983, 446.069, 191.852, 445.648, 199.841 )

[node name="Player" type="AnimatedSprite" parent="."]
position = Vector2( 33.936, 11.3393 )
frames = SubResource( 30 )
animation = "Idle"
frame = 4
playing = true

[node name="AttackArea" type="Area2D" parent="." groups=[
"Sword",
]]
collision_mask = 8
script = ExtResource( 14 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( 84.7525, 9.92242 )
shape = SubResource( 31 )
disabled = true

[node name="AttackArea2" type="Area2D" parent="." groups=[
"Sword",
]]
collision_mask = 8
script = ExtResource( 14 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea2"]
position = Vector2( -15.1453, 10.468 )
shape = SubResource( 32 )
disabled = true

[node name="HealthBar" type="TextureProgress" parent="."]
margin_left = -409.0
margin_top = -286.0
margin_right = -281.0
margin_bottom = -270.0
max_value = 10000.0
value = 10000.0
texture_under = ExtResource( 18 )
texture_over = ExtResource( 17 )
texture_progress = ExtResource( 19 )
tint_under = Color( 0, 0, 0, 1 )
tint_progress = Color( 0.172549, 1, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="area_entered" from="PHitbox" to="." method="_on_PHitbox_area_entered"]
[connection signal="animation_finished" from="Player" to="." method="_on_Player_animation_finished"]
